add image and headers

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <!-- external css above !-->
 </head>
 <body>
-
+   <div id="main_container">
+    <h1>Melanie Gasmen</h1>
+    <h5>a brief synopsis of how amazing I am</h5>
+        <div id="logo">
+            <img src="images/photo-landscape.jpg" alt="MG Logo image" width="160px">
+        </div>
+    </div>
 </body>
 </html>
