tried background image? about page, navigation

--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
     <h1>Melanie Gasmen</h1>
     <h5>a brief synopsis of how amazing I am</h5>
         <div id="logo">
-            <img src="images/photo-landscape.jpg" alt="MG Logo image" width="160px">
+            <img src="images/NEWlogo.jpg" alt="MG Logo image" width="160px">
         </div>
+    <h3>home</h3>
+    <h3>about</h3>
+    <h3>portfolio</h3>
+    <h3>contact</h3>
     </div>
 </body>
 </html>
