fixed position logo; linked pages; box

--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
 </head>
 <body>
    <div id="main_container">
+    <div id="box">
     <h1>Melanie Gasmen</h1>
     <h5>a brief synopsis of how amazing I am</h5>
+       </div>
         <div id="logo">
-            <img src="images/NEWlogo.jpg" alt="MG Logo image" width="160px">
+            <img src="images/NEWlogo.png" alt="MG Logo image" width="160px">
         </div>
-    <h3>home</h3>
-    <h3>about</h3>
-    <h3>portfolio</h3>
-    <h3>contact</h3>
+        <!-- logo above !-->
+    <h3><a href="index.html">home</a></h3>
+    <h3><a href="about.html">about</a></h3>
+    <h3><a href="portfolio.html">portfolio</a></h3>
+    <h3><a href="contact.html">contact</a></h3>
+
     </div>
 </body>
 </html>
