--- a/index.html
+++ b/index.html
@@ -8,19 +8,22 @@
 </head>
 <body>
    <div id="main_container">
-    <div id="box">
+    <div class="box">
     <h1>Melanie Gasmen</h1>
     <h5>a brief synopsis of how amazing I am</h5>
-       </div>
         <div id="logo">
             <img src="images/NEWlogo.png" alt="MG Logo image" width="160px">
         </div>
         <!-- logo above !-->
-    <h3><a href="index.html">home</a></h3>
-    <h3><a href="about.html">about</a></h3>
-    <h3><a href="portfolio.html">portfolio</a></h3>
-    <h3><a href="contact.html">contact</a></h3>
-
+        </div>
+       <div class="box2"></div>
+        <!-- box div !-->
+    <div class="nav" id="mynav">
+        <h3><a href="index.html">home</a></h3>
+        <h3><a href="about.html">about</a></h3>
+        <h3><a href="portfolio.html">portfolio</a></h3>
+        <h3><a href="contact.html">contact</a></h3>
+    </div>
     </div>
 </body>
 </html>
