--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
             <img src="images/NEWlogo.png" alt="MG Logo image" width="160px">
         </div>
         <!-- logo above !-->
-        </div>
        <div class="box2"></div>
+        </div>
         <!-- box div !-->
-    <div class="nav" id="mynav">
-        <h3><a href="index.html">home</a></h3>
-        <h3><a href="about.html">about</a></h3>
-        <h3><a href="portfolio.html">portfolio</a></h3>
-        <h3><a href="contact.html">contact</a></h3>
-    </div>
+    <ul>
+        <li><h3><a href="index.html">home</a></h3></li>
+        <li><h3><a href="about.html">about</a></h3></li>
+        <li><h3><a href="portfolio.html">portfolio</a></h3></li>
+        <li><h3><a href="contact.html">contact</a></h3></li>
+    </ul>
     </div>
 </body>
 </html>
