finished index mockup and hopefully didn't mess up

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
    <div id="main_container">
     <div class="box">
-    <h1>Melanie Gasmen</h1>
+    <div id="mg"><img src="images/name.png" alt="name" width="561px"></div>
     <h5>a brief synopsis of how amazing I am</h5>
         <div id="logo">
             <img src="images/NEWlogo.png" alt="MG Logo image" width="160px">
+        </div>
         </div>
         <!-- logo above !-->
        <div class="box2"></div>
