--- a/portfolio.html
+++ b/portfolio.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Melanie's Portfolio Website</title>
+    <link rel="stylesheet" href="css/portfoliostyle.css" type="text/css">
+    <!-- external css above !-->
 </head>
 <body>
-
+    <h1>Literally Stab Me</h1>
+    <h1>Portfolio</h1>
+    <ul>
+        <li><h3><a href="index.html">home</a></h3></li>
+        <li><h3><a href="about.html">about</a></h3></li>
+        <li><h3><a href="portfolio.html">portfolio</a></h3></li>
+        <li><h3><a href="contact.html">contact</a></h3></li>
+    </ul>
 </body>
 </html>
