literally what just happened

--- a/index.html
+++ b/index.html
@@ -8,23 +8,26 @@
 </head>
 <body>
    <div id="main_container">
-    <div class="box">
-    <div id="mg"><img src="images/name.png" alt="name" width="561px"></div>
-    <h5>a brief synopsis of how amazing I am</h5>
-        <div id="logo">
-            <img src="images/NEWlogo.png" alt="MG Logo image" width="160px">
-        </div>
-        </div>
-        <!-- logo above !-->
-       <div class="box2"></div>
-        </div>
-        <!-- box div !-->
-    <ul>
+    <nav>
+       <ul class="navlinks">
         <li><h3><a href="index.html">home</a></h3></li>
         <li><h3><a href="about.html">about</a></h3></li>
         <li><h3><a href="portfolio.html">portfolio</a></h3></li>
         <li><h3><a href="contact.html">contact</a></h3></li>
     </ul>
+    </nav>
+
+    <div class="box">
+    <div id="mg"><img src="images/name.png" alt="name" width="561px"></div>
+    <h5>a brief synopsis of how amazing I am</h5>
+        <div id="logo">
+            <img src="images/NEWlogo.png" alt="MG Logo image" width="160px">
+        </div> <!-- end of logo div !-->
+        </div> <!-- end of box div -->
+        <!-- logo above !-->
+       <div class="box2"></div>
+        <!-- box div !-->
+   class="navlinks"
     </div>
 </body>
 </html>
