css for all page

--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@
     <!-- external css above !-->
 </head>
 <body>
-    <img src="images/about.png" alt="aboutme" width="257">
-    <blockquote>graphic design is my passion</blockquote>
+    <div id="about"><img src="images/about.png" alt="aboutme" width="300"></div>
+    <blockquote>something about who you are in large font/quote</blockquote>
     <ul>
         <li><h3><a href="index.html">home</a></h3></li>
         <li><h3><a href="about.html">about</a></h3></li>
