--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
     <div class="box">
     <div id="mg"><img src="images/name.png" alt="name" width="600px"></div>
-    <h5>a brief synopsis of how amazing I am</h5>
+    <p>a brief synopsis of how amazing I am</p>
         <div id="logo">
             <img src="images/NEWlogo.png" alt="MG Logo image" width="180px">
         </div> <!-- end of logo div !-->
