--- a/portfolio.html
+++ b/portfolio.html
@@ -7,8 +7,7 @@
     <!-- external css above !-->
 </head>
 <body>
-    <h1>Literally Stab Me</h1>
-    <h1>Portfolio</h1>
+    <img src="images/portfolio.png" alt="aboutme" width="300">
     <ul>
         <li><h3><a href="index.html">home</a></h3></li>
         <li><h3><a href="about.html">about</a></h3></li>
