--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Melanie's Portfolio Website</title>
+    <link rel="stylesheet" href="css/aboutstyle.css" type="text/css">
+    <!-- external css above !-->
 </head>
 <body>
-
+    <div id="about"><img src="images/contact.png" alt="aboutme" width="300"></div>
+    <ul>
+        <li><h3><a href="index.html">home</a></h3></li>
+        <li><h3><a href="about.html">about</a></h3></li>
+        <li><h3><a href="portfolio.html">portfolio</a></h3></li>
+        <li><h3><a href="contact.html">contact</a></h3></li>
+    </ul>
 </body>
 </html>
