positioning in about page

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,12 +7,18 @@
     <!-- external css above !-->
 </head>
 <body>
-    <img src="images/portfolio.png" alt="aboutme" width="300">
+    <div id="port"><img src="images/portfolio.png" alt="aboutme" width="300"></div>
     <ul>
         <li><h3><a href="index.html">home</a></h3></li>
         <li><h3><a href="about.html">about</a></h3></li>
         <li><h3><a href="portfolio.html">portfolio</a></h3></li>
         <li><h3><a href="contact.html">contact</a></h3></li>
     </ul>
+    <div class="box">
+        <p><i>brief portfolio synopsis here</i>
+        <br><b><i>visual</i></b>
+        <br><b><i>digital</i></b>
+        <br><b><i>writing</i></b></p>
+    </div>
 </body>
 </html>
