about page boxes

--- a/about.html
+++ b/about.html
@@ -7,8 +7,11 @@
     <!-- external css above !-->
 </head>
 <body>
-    <div id="about"><img src="images/about.png" alt="aboutme" width="300"></div>
-    <blockquote>something about who you are in large font/quote</blockquote>
+    <div id="about"><img src="images/about.png" alt="aboutme" width="320px"></div>
+    <div class="box">
+    <blockquote><i>something about who you are in large font/quote</i></blockquote>
+    <div class="box2"></div>
+    </div>
     <ul>
         <li><h3><a href="index.html">home</a></h3></li>
         <li><h3><a href="about.html">about</a></h3></li>
