--- a/portfolio.html
+++ b/portfolio.html
@@ -20,5 +20,14 @@
         <br><b><i>digital</i></b>
         <br><b><i>writing</i></b></p>
     </div>
+    <div class="works">
+    <!--linked portfolio images here-->
+    <div class="img"></div>
+    <div class="img2"></div>
+    <div class="img3"></div>
+    <div class="img4"></div>
+    <div class="img5"></div>
+    <div class="img6"></div>
+    </div>
 </body>
 </html>
