--- a/contact.html
+++ b/contact.html
@@ -3,16 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Melanie's Portfolio Website</title>
-    <link rel="stylesheet" href="css/aboutstyle.css" type="text/css">
+    <link rel="stylesheet" href="css/contactstyle.css" type="text/css">
     <!-- external css above !-->
 </head>
 <body>
-    <div id="about"><img src="images/contact.png" alt="aboutme" width="300"></div>
+    <div id="contact"><img src="images/contact.png" alt="aboutme" width="270"></div>
     <ul>
         <li><h3><a href="index.html">home</a></h3></li>
         <li><h3><a href="about.html">about</a></h3></li>
         <li><h3><a href="portfolio.html">portfolio</a></h3></li>
         <li><h3><a href="contact.html">contact</a></h3></li>
     </ul>
+    <div class="container">
+  <form action="/action_page.php">
+
+    <input type="text" id="fname" name="firstname" placeholder="first name">
+
+    <input type="text" id="lname" name="lastname" placeholder="last name">
+
+    <input type="text" id="mail" name="email" placeholder="email">
+
+    <textarea id="subject" name="subject" placeholder="write something here!" style="height:200px"></textarea>
+
+    <input type="submit" value="Submit">
+
+  </form>
+</div>
 </body>
 </html>
