super neat image popup

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,9 +25,44 @@
     <div class="img"></div>
     <div class="img2"></div>
     <div class="img3"></div>
-    <div class="img4"></div>
-    <div class="img5"></div>
-    <div class="img6"></div>
     </div>
+    <!--a test,-->
+    <!-- Trigger the Modal -->
+<img id="myImg" src="images/photo-landscape.jpg" alt="sample portfolio image" width="250">
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- The Close Button -->
+  <span class="close" onclick="document.getElementById('myModal').style.display='none'">&times;</span>
+
+  <!-- Modal Content (The Image) -->
+  <img class="modal-content" id="img01">
+
+  <!-- Modal Caption (Image Text) -->
+  <div id="caption"></div>
+</div>
+    <script>// Get the modal
+var modal = document.getElementById('myModal');
+
+// Get the image and insert it inside the modal - use its "alt" text as a caption
+var img = document.getElementById('myImg');
+var modalImg = document.getElementById("img01");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+    modal.style.display = "block";
+    modalImg.src = this.src;
+    captionText.innerHTML = this.alt;
+}
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+  modal.style.display = "none";
+}
+</script>
+
 </body>
 </html>
