we all need trees

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
     </div>
     <!--a test,-->
     <!-- Trigger the Modal -->
-<img id="myImg" src="images/photo-landscape.jpg" alt="sample portfolio image" width="250">
+<img id="myImg" src="images/We_All_Need_Trees.jpg" alt="sample portfolio image" width="250">
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
