weird nav thing that's super cool

--- a/contact.html
+++ b/contact.html
@@ -7,13 +7,14 @@
     <!-- external css above !-->
 </head>
 <body>
-    <div id="contact"><img src="images/contact.png" alt="aboutme" width="270"></div>
+    <div id="contact"><img src="images/contact.png" alt="contact" width="270"></div>
     <ul>
-        <li><h3><a href="index.html">home</a></h3></li>
-        <li><h3><a href="about.html">about</a></h3></li>
-        <li><h3><a href="portfolio.html">portfolio</a></h3></li>
-        <li><h3><a href="contact.html">contact</a></h3></li>
+        <li><h3><a href="index.html" class="navlinks">home</a></h3></li>
+        <li><h3><a href="about.html" class="navlinks">about</a></h3></li>
+        <li><h3><a href="portfolio.html" class="navlinks">portfolio</a></h3></li>
+        <li><h3><a href="contact.html" class="navlinks">contact</a></h3></li>
     </ul>
+    <img src="images/20170107_125503.jpg" alt="c'est moi" width="200px"/>
     <div class="container">
   <form action="/action_page.php">
 
@@ -26,7 +27,6 @@
     <textarea id="subject" name="subject" placeholder="write something here!" style="height:200px"></textarea>
 
     <input type="submit" value="Submit">
-
   </form>
 </div>
 </body>
