--- a/about.html
+++ b/about.html
@@ -13,10 +13,10 @@
     <div class="box2"></div>
     </div>
     <ul>
-        <li><h3><a href="index.html">home</a></h3></li>
-        <li><h3><a href="about.html">about</a></h3></li>
-        <li><h3><a href="portfolio.html">portfolio</a></h3></li>
-        <li><h3><a href="contact.html">contact</a></h3></li>
+        <li><h3><a href="index.html" class="navlinks">home</a></h3></li>
+        <li><h3><a href="about.html" class="navlinks">about</a></h3></li>
+        <li><h3><a href="portfolio.html" class="navlinks">portfolio</a></h3></li>
+        <li><h3><a href="contact.html" class="navlinks">contact</a></h3></li>
     </ul>
     <div class="text">
     <h4>Hello!</h4>
