--- a/portfolio.html
+++ b/portfolio.html
@@ -9,10 +9,10 @@
 <body>
     <div id="port"><img src="images/portfolio.png" alt="aboutme" width="300"></div>
     <ul>
-        <li><h3><a href="index.html">home</a></h3></li>
-        <li><h3><a href="about.html">about</a></h3></li>
-        <li><h3><a href="portfolio.html">portfolio</a></h3></li>
-        <li><h3><a href="contact.html">contact</a></h3></li>
+        <li><h3><a href="index.html" class="navlinks">home</a></h3></li>
+        <li><h3><a href="about.html" class="navlinks">about</a></h3></li>
+        <li><h3><a href="portfolio.html" class="navlinks">portfolio</a></h3></li>
+        <li><h3><a href="contact.html" class="navlinks">contact</a></h3></li>
     </ul>
     <div class="box">
         <p><i>brief portfolio synopsis here</i>
