--- a/about.html
+++ b/about.html
@@ -12,12 +12,15 @@
     <blockquote><i>something about who you are in large font/quote</i></blockquote>
     <div class="box2"></div>
     </div>
+    <div id="header">
+    <!--nav bar-->
     <ul>
         <li><h3><a href="index.html" class="navlinks">home</a></h3></li>
         <li><h3><a href="about.html" class="navlinks">about</a></h3></li>
         <li><h3><a href="portfolio.html" class="navlinks">portfolio</a></h3></li>
         <li><h3><a href="contact.html" class="navlinks">contact</a></h3></li>
     </ul>
+    </div>
     <div class="text">
     <h4>Hello!</h4>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum quia totam similique veniam exercitationem quos enim ut officia voluptate rem deleniti tempora sit explicabo, accusantium fugit quam aspernatur sapiente, eligendi consequuntur esse veritatis commodi aperiam modi reprehenderit. Assumenda natus aspernatur ratione alias pariatur id dolore quas porro vero laboriosam reprehenderit veritatis quis similique odio inventore provident, enim tenetur voluptas officiis est, velit nihil ex. Harum C'EST MOI voluptates laboriosam dolorem perferendis odit temporibus asperiores impedit quasi ut optio blanditiis unde officia, nostrum enim adipisci assumenda minima repellendus quibusdam, delectus, sunt ex, placeat nisi porro est. Deleniti ratione magnam nostrum natus ad, quibusdam placeat. Repellendus voluptatem id nam temporibus ratione obcaecati hic dolore cumque repudiandae saepe sapiente maiores dolorem officia explicabo neque quasi, possimus a ipsa molestiae assumenda harum facere reprehenderit ducimus soluta sequi. Fugiat nobis atque earum, labore consectetur ducimus temporibus non nam cumque! Similique dolor perspiciatis sed tenetur, saepe laboriosam quibusdam vel eligendi repellat earum repellendus natus harum in consequuntur vitae quisquam delectus voluptas sunt consequatur dicta, animi temporibus? Reiciendis corrupti in possimus sapiente consectetur cumque et! Quasi dolores odio, distinctio odit! In expedita doloribus voluptates iste vero maxime eius, modi vel eos dicta distinctio perspiciatis tempore harum ex quam maiores, nam minus illo. Totam ratione quae excepturi quo perspiciatis ipsam, tenetur natus officiis ipsa, dolorum ut dolorem delectus possimus nostrum pariatur aliquid quis aliquam quasi! Libero vel atque incidunt in laudantium maxime voluptatem earum dolor fuga inventore tempora sint molestiae vitae, esse optio animi ducimus natus dicta ipsum unde. Maiores, repudiandae modi debitis expedita libero at, porro deleniti ipsum praesentium aspernatur voluptas enim! Quidem dolores illo deserunt nesciunt explicabo consectetur sapiente sequi sit corporis perspiciatis recusandae porro, esse magni saepe. Rem, laudantium? Omnis possimus a eos laboriosam ipsum, vel amet necessitatibus, ab dolorem laudantium cumque fugit non, quos velit, provident.</p><div class="img"></div></div>
