--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,9 @@
         <li><h3><a href="portfolio.html" class="navlinks">portfolio</a></h3></li>
         <li><h3><a href="contact.html" class="navlinks">contact</a></h3></li>
     </ul>
+        <img src="images/NEWlogo.png" alt="MG Logo image" width="150px" id="logo">
     </div>
-    <img src="images/20170107_125503.jpg" alt="c'est moi" width="400px" id="moi"/>
+    <img src="images/20170107_125503.jpg" alt="c'est moi" height="350px" id="moi"/>
     <div class="container">
   <form action="/action_page.php">
 
