--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
         <li><h3><a href="portfolio.html" class="navlinks">portfolio</a></h3></li>
         <li><h3><a href="contact.html" class="navlinks">contact</a></h3></li>
     </ul>
+        <img src="images/NEWlogo.png" alt="MG Logo image" width="150px" id="logo">
     </div>
     <div class="text">
     <h4>Hello!</h4>
