--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
    <div id="main_container">
     <nav>
-       <ul class="navlinks">
-        <li><h3><a href="index.html">home</a></h3></li>
-        <li><h3><a href="about.html">about</a></h3></li>
-        <li><h3><a href="portfolio.html">portfolio</a></h3></li>
-        <li><h3><a href="contact.html">contact</a></h3></li>
-    </ul>
+        <ul>
+        <li><h3><a href="index.html" class="navlinks">home</a></h3></li>
+        <li><h3><a href="about.html" class="navlinks">about</a></h3></li>
+        <li><h3><a href="portfolio.html" class="navlinks">portfolio</a></h3></li>
+        <li><h3><a href="contact.html" class="navlinks">contact</a></h3></li>
+        </ul>
     </nav>
     <div class="box">
     <div id="mg"><img src="images/name.png" alt="name" width="600px"></div>
