--- a/portfolio.html
+++ b/portfolio.html
@@ -16,6 +16,7 @@
         <li><h3><a href="portfolio.html" class="navlinks">portfolio</a></h3></li>
         <li><h3><a href="contact.html" class="navlinks">contact</a></h3></li>
     </ul>
+        <img src="images/NEWlogo.png" alt="MG Logo image" width="150px" id="logo">
     </div>
     <div class="box">
         <p><i>brief portfolio synopsis here</i>
@@ -28,7 +29,6 @@
     <div class="img"></div>
     <div class="img2"></div>
     <div class="img3"></div>
-    </div>
     <!--image popup-->
     <img id="myImg" src="images/We_All_Need_Trees.jpg" alt="sample portfolio image" width="250">
     <div id="myModal" class="modal">
@@ -62,5 +62,7 @@ span.onclick = function() {
 }
 </script>
     <!--END OF JAVASCRIPT-->
+    </div>
+
 </body>
 </html>
