--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     </div>
     <img src="images/20170107_125503.jpg" alt="c'est moi" height="350px" id="moi"/>
     <div class="container">
-  <form action="/action_page.php">
+  <form action="mailto:s.melanie.gasmen@redclayschools.com" method="post" enctype="text/plain">
 
     <input type="text" id="fname" name="firstname" placeholder="first name">
 
