--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Melanie's Portfolio Website</title>
     <link rel="stylesheet" href="css/contactstyle.css" type="text/css">
-    <!-- external css above !-->
+    <!-- external css above -->
 </head>
 <body>
     <div id="contact"><img src="images/contact.png" alt="contact" width="270"></div>
@@ -19,7 +19,8 @@
     </div>
     <img src="images/20170107_125503.jpg" alt="c'est moi" height="350px" id="moi"/>
     <div class="container">
-  <form action="mailto:s.melanie.gasmen@redclayschools.com" method="post" enctype="text/plain">
+    <!-- contact form -->
+  <form action="#" method="post" enctype="multipart/form-data">
 
     <input type="text" id="fname" name="firstname" placeholder="first name">
 
