--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     <img src="images/20170107_125503.jpg" alt="c'est moi" height="350px" id="moi"/>
     <div class="container">
     <!-- contact form -->
-  <form action="#" method="post" enctype="multipart/form-data">
+  <form action="mail:s.melanie.gasmen@redclayschools.com" method="post" enctype="multipart/form-data">
 
     <input type="text" id="fname" name="firstname" placeholder="first name">
 
