--- a/contact.html
+++ b/contact.html
@@ -20,20 +20,13 @@
     <img src="images/20170107_125503.jpg" alt="c'est moi" height="350px" id="moi"/>
     <div class="container">
     <!-- contact form -->
-  <form name="contact_form" action="contact-form-handler.php" method="post" enctype="multipart/form-data">
+  <form action="mailto:s.melanie.gasmen@redclayschools.com" method="post" enctype="text/plain">
     <input type="text" id="fname" name="firstname" placeholder="first name">
     <input type="text" id="lname" name="lastname" placeholder="last name">
     <input type="text" id="mail" name="email" placeholder="email">
     <textarea id="subject" name="subject" placeholder="write something here!" style="height:200px"></textarea>
     <input type="submit" value="Submit">
   </form>
-  <script language="JavaScript">
-var frmvalidator  = new Validator("contactform");
-frmvalidator.addValidation("name","req","Please provide your name");
-frmvalidator.addValidation("email","req","Please provide your email");
-frmvalidator.addValidation("email","email",
-  "Please enter a valid email address");
-    </script>
 </div>
 </body>
 </html>
