--- a/index.html
+++ b/index.html
@@ -8,22 +8,13 @@
 </head>
 <body>
    <div id="main_container">
-    <nav class="navbar-fixed-top">
-       <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span> 
-      </button>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav">
+    <nav>
+        <ul>
         <li><h3><a href="index.html" class="navlinks">home</a></h3></li>
         <li><h3><a href="about.html" class="navlinks">about</a></h3></li>
         <li><h3><a href="portfolio.html" class="navlinks">portfolio</a></h3></li>
         <li><h3><a href="contact.html" class="navlinks">contact</a></h3></li>
         </ul>
-        </div>
     </nav>
     <div class="box">
     <div id="mg"><img src="images/name.png" alt="name" width="600px"></div>
