--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Melanie's Portfolio Website</title>
     <link rel="stylesheet" href="css/contactstyle.css" type="text/css">
-    <!-- external css above -->
+    <!-- external css above !-->
 </head>
 <body>
     <div id="contact"><img src="images/contact.png" alt="contact" width="270"></div>
@@ -17,14 +17,20 @@
     </ul>
         <img src="images/NEWlogo.png" alt="MG Logo image" width="150px" id="logo">
     </div>
+    <h4>Send a message!</h4>
     <img src="images/20170107_125503.jpg" alt="c'est moi" height="350px" id="moi"/>
     <div class="container">
-    <!-- contact form -->
-  <form action="mailto:s.melanie.gasmen@redclayschools.com" method="post" enctype="text/plain">
+    <!-- beginning of contact form-->
+  <form action="mailto: s.melanie.gasmen@redclayschools.com">
+
     <input type="text" id="fname" name="firstname" placeholder="first name">
+
     <input type="text" id="lname" name="lastname" placeholder="last name">
+
     <input type="text" id="mail" name="email" placeholder="email">
+
     <textarea id="subject" name="subject" placeholder="write something here!" style="height:200px"></textarea>
+
     <input type="submit" value="Submit">
   </form>
 </div>
