trying fixed nav bar

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     <img src="images/20170107_125503.jpg" alt="c'est moi" height="350px" id="moi"/>
     <div class="container">
     <!-- beginning of contact form-->
-  <form action="mailto: s.melanie.gasmen@redclayschools.com">
+  <form action="mailto: s.melanie.gasmen@redclayschools.com" method="post" enctype="text/plain">
 
     <input type="text" id="fname" name="firstname" placeholder="first name">
 
