--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
     <blockquote><i>something about who you are in large font/quote</i></blockquote>
     <div class="box2"></div>
     </div>
+    <div class="navbar">
     <div id="header">
     <!--nav bar-->
     <ul>
@@ -21,6 +22,7 @@
         <li><h3><a href="contact.html" class="navlinks">contact</a></h3></li>
     </ul>
         <img src="images/NEWlogo.png" alt="MG Logo image" width="150px" id="logo">
+    </div>
     </div>
     <div class="text">
     <h4>Hello!</h4>
