MAKE MAIN CONTENT FOR CONTACT PAGE

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,10 +19,7 @@
         <img src="images/NEWlogo.png" alt="MG Logo image" width="150px" id="logo">
     </div>
     <div class="box">
-        <p><i>brief portfolio synopsis here</i>
-        <br><b><i>visual</i></b>
-        <br><b><i>digital</i></b>
-        <br><b><i>writing</i></b></p>
+        <p><i>brief portfolio synopsis here</i></p>
     </div>
     <div class="works">
     <!--linked portfolio images here-->
