--- a/contact.html
+++ b/contact.html
@@ -21,15 +21,15 @@
         <img src="images/20170107_125503.jpg" alt="c'est moi" height="350px" id="moi"/>
     <div class="container">
     <!-- beginning of contact form-->
-      <form action="mailto: s.melanie.gasmen@redclayschools.com" method="post" enctype="text/plain">
+      <form action="mailto:s.melanie.gasmen@redclayschools.com" method="post" enctype="text/plain">
 
-    <input type="text" id="fname" name="firstname" placeholder="first name">
+    <input type="text" id="fname" name="firstname" placeholder="first name" required>
 
-    <input type="text" id="lname" name="lastname" placeholder="last name">
+    <input type="text" id="lname" name="lastname" placeholder="last name" required>
 
-    <input type="text" id="mail" name="email" placeholder="email">
+    <input type="text" id="mail" name="email" placeholder="email" required>
 
-    <textarea id="subject" name="subject" placeholder="write something here!" style="height:200px"></textarea>
+    <textarea id="subject" name="subject" placeholder="write something here!" style="height:200px" required></textarea>
 
     <input type="submit" value="Submit">
   </form>
