--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- external css above !-->
 </head>
 <body>
+  <div id="contain-contain">
    <div id="main_container">
     <nav>
         <ul>
@@ -23,9 +24,8 @@
             <img src="images/NEWlogo.png" alt="MG Logo image" width="180px">
         </div> <!-- end of logo div !-->
         </div> <!-- end of box div -->
-       <div class="box2"></div>
-        <!-- box div !-->
-   class="navlinks"
-    </div>
+       <div class="box2"></div> <!-- box div !-->
+    </div><!-- end of main container-->
+    </div><!-- end of contain contain-->
 </body>
 </html>
