about bio changed, sort out portfolio in columns

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     </div>
     <div class="text">
     <h4>Hello!</h4>
-    <p>Melanie Gasmen is a former middle school and current high school student at Cab Calloway School of the Arts. She double-majors in both Visual Arts and Digital Media. <br/><br/>Melanie is a member of several organizations, such as: Technology Student Association; Science Olympiad; National Art Honor Society; Communication Arts Honor Society; and National Honor Society. She has an abundance of volunteer experience as well. Melanie has done community projects that involved photography, art, advertisement, and assistment. <br/><br/>She has also won several awards since her middle school career. As of 2017, she won two Honorable Mentions, two Silver Keys, and two Gold Keys while competing in the statewide Scholastic Art & Writing Awards.
+    <p>Melanie Gasmen is a current student at Cab Calloway School of the Arts. She double-majors in both Visual Arts and Digital Media and has earned distinguished honors since middle school.<br/><br/>Melanie is a member of several organizations, such as: Technology Student Association; Science Olympiad; National Art Honor Society; Communication Arts Honor Society; and National Honor Society. She has an abundance of volunteer experience as well. Melanie has done community projects that involved photography, art, advertisement, and assistment. <br/><br/>She has also won several awards since her middle school career. As of 2017, she won two Honorable Mentions, two Silver Keys, and two Gold Keys while competing in the statewide Scholastic Art & Writing Awards.
     </p><div class="img"></div></div>
 </body>
 </html>
