--- a/portfolio.html
+++ b/portfolio.html
@@ -24,14 +24,21 @@
     </div>
     <div class="works">
     <!--image popup-->
-    <img src="images/portfolio_images/We_All_Need_Trees.jpg" alt="sample portfolio image" width="250" class="image" id="0">
-    <img src="images/portfolio_images/TSADODGEFINAL.jpg" alt="sample portfolio image" width="250" class="image" id="1">
-    <img src="images/portfolio_images/bio_FINAL.jpg" alt="sample portfolio image" width="250" class="image" id="2">
-    <img src="images/portfolio_images/let_it_be.jpg" alt="sample portfolio image" width="250" class="image" id="3">
-    <img src="images/portfolio_images/POSTERREVISED2.jpg" alt="sample portfolio image" width="250" class="image" id="4">
-    <img src="images/portfolio_images/Cab_Course_Selection_Cover.jpg" alt="sample portfolio image" width="250" class="image" id="5">
-    <img src="images/portfolio_images/Magazine_Spread.jpg" alt="sample portfolio image" width="250" class="image" id="6">
-    <img src="images/portfolio_images/Canvas_sale.jpg" alt="sample portfolio image" width="250" class="image" id="7">
+    <!--lay out in flex instead-->
+    <div class="column">
+        <img src="images/portfolio_images/We_All_Need_Trees.jpg" alt="sample portfolio image" style="width:20%" class="image" id="0">
+        <img src="images/portfolio_images/TSADODGEFINAL.jpg" alt="sample portfolio image" style="width:20%" class="image" id="1">
+        <img src="images/portfolio_images/bio_FINAL.jpg" alt="sample portfolio image" style="width:20%" class="image" id="2">
+    </div>
+    <div class="column">
+        <img src="images/portfolio_images/let_it_be.jpg" alt="sample portfolio image" style="width:20%" class="image" id="3">
+        <img src="images/portfolio_images/POSTERREVISED2.jpg" alt="sample portfolio image" style="width:20%" class="image" id="4">
+        <img src="images/portfolio_images/Cab_Course_Selection_Cover.jpg" alt="sample portfolio image" style="width:20%" class="image" id="5">
+    </div>
+    <div class="column">
+        <img src="images/portfolio_images/Magazine_Spread.jpg" alt="sample portfolio image" style="width:20%" class="image" id="6">
+        <img src="images/portfolio_images/Canvas_sale.jpg" alt="sample portfolio image" style="width:20%" class="image" id="7">
+        </div>
 
     <div id="myModal" class="modal">
     <!-- The Close Button -->
