--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 <body>
-    <div id="port"><img src="images/portfolio.png" alt="aboutme" width="300"></div>
     <!--header nav bar-->
     <div id="header">
     <ul>
@@ -19,26 +18,32 @@
     </ul>
         <img src="images/NEWlogo.png" alt="MG Logo image" width="150px" id="logo">
     </div>
+
+    <!-- End of NAV-->
+
+    <div class="works">
+    <div id="port"><img src="images/portfolio.png" alt="aboutme" width="300"></div>
     <div class="box">
         <p><i>brief portfolio synopsis here</i></p>
     </div>
-    <div class="works">
-    <!--image popup-->
+
     <!--lay out in flex instead-->
-    <div class="column">
-        <img src="images/portfolio_images/We_All_Need_Trees.jpg" alt="sample portfolio image" style="width:20%" class="image" id="0">
-        <img src="images/portfolio_images/TSADODGEFINAL.jpg" alt="sample portfolio image" style="width:20%" class="image" id="1">
-        <img src="images/portfolio_images/bio_FINAL.jpg" alt="sample portfolio image" style="width:20%" class="image" id="2">
-    </div>
-    <div class="column">
-        <img src="images/portfolio_images/let_it_be.jpg" alt="sample portfolio image" style="width:20%" class="image" id="3">
-        <img src="images/portfolio_images/POSTERREVISED2.jpg" alt="sample portfolio image" style="width:20%" class="image" id="4">
-        <img src="images/portfolio_images/Cab_Course_Selection_Cover.jpg" alt="sample portfolio image" style="width:20%" class="image" id="5">
-    </div>
-    <div class="column">
-        <img src="images/portfolio_images/Magazine_Spread.jpg" alt="sample portfolio image" style="width:20%" class="image" id="6">
-        <img src="images/portfolio_images/Canvas_sale.jpg" alt="sample portfolio image" style="width:20%" class="image" id="7">
+    <div class="works_container">
+        <img class="column_item" src="images/portfolio_images/We_All_Need_Trees.jpg" alt="sample portfolio image" class="image" id="0">
+        <img class="column_item" src="images/portfolio_images/TSADODGEFINAL-2.jpg" alt="sample portfolio image" class="image" id="1">
+        <img class="column_item" src="images/portfolio_images/bio_FINAL.jpg" alt="sample portfolio image"  class="image" id="2">
+        <img class="column_item" src="images/portfolio_images/let_it_be.jpg" alt="sample portfolio image"  class="image" id="3">
+        <img class="column_item" src="images/portfolio_images/POSTERREVISED2.jpg" alt="sample portfolio image"  class="image" id="4">
+        <img class="column_item" src="images/portfolio_images/Cab_Course_Selection_Cover.jpg" alt="sample portfolio image"  class="image" id="5">
+        <img class="column_item" src="images/portfolio_images/Magazine_Spread.jpg" alt="sample portfolio image"  class="image" id="6">
+        <img class="column_item" src="images/portfolio_images/Canvas_sale.jpg" alt="sample portfolio image" class="image" id="7">
+        <img class="column_item" src="images/portfolio_images/Gasmen_M_U1GOLD.jpg" alt="sample portfolio image" class="image" id="8">
+        <img class="column_item" src="images/portfolio_images/Melanie_Gasmen_Honorable_Mention.jpg" alt="sample portfolio image" class="image" id="9">
+        <img class="column_item" src="images/portfolio_images/Melanie_Gasmen_Teapot4.jpg" alt="sample portfolio image" class="image" id="10">
+        <img class="column_item" src="images/portfolio_images/Melanie_Gasmen_U1%202.jpg" alt="sample portfolio image" class="image" id="11">
         </div>
+
+    <!--image popup-->
 
     <div id="myModal" class="modal">
     <!-- The Close Button -->
@@ -52,7 +57,7 @@
    <script>
 // Get the modal
 var modal = document.getElementById('myModal');
-var images = ["We_All_Need_Trees.jpg", "TSADODGEFINAL.jpg", "bio_FINAL.jpg", "let_it_be.jpg", "POSTERREVISED2.jpg", "Cab_Course_Selection_Cover.jpg", "Magazine_Spread.jpg", "Canvas_sale.jpg"];
+var images = ["We_All_Need_Trees.jpg", "TSADODGEFINAL.jpg", "bio_FINAL.jpg", "let_it_be.jpg", "POSTERREVISED2.jpg", "Cab_Course_Selection_Cover.jpg", "Magazine_Spread.jpg", "Canvas_sale.jpg", "Gasmen_M_U1GOLD.jpg", "Melanie_Gasmen_Honorable_Mention.jpg", "Melanie_Gasmen_Teapot4.jpg", "Melanie_Gasmen_U1%202.jpg"];
 var position = 0;
 var image = images[0];
 var viewport = document.getElementById('modalimage');
