--- a/about.html
+++ b/about.html
@@ -8,9 +8,8 @@
 </head>
 <body>
     <div id="about"><img src="images/about.png" alt="aboutme" width="320px"></div>
-    <div class="box">
-    <blockquote><i>i'll think of something later</i></blockquote>
-    <div class="box2"></div>
+    <div class="box2">
+    <blockquote><i>"I put my heart and my soul into my work, and have lost my mind in the process."<br/>- Vincent Van Gogh </i></blockquote>
     </div>
     <div id="header">
     <!--nav bar-->
