--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     </ul>
         <img src="images/NEWlogo.png" alt="MG Logo image" width="150px" id="logo">
     </div>
-        <div id="contact"><img src="images/contact.png" alt="contact" width="270"></div>
+        <div id="contact"><img src="images/contact.png" alt="contact" width="260px"></div>
         <h4>Send a message!</h4>
         <img src="images/20170107_125503.jpg" alt="c'est moi" height="390px" id="moi"/>
     <div class="container">
