--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
        </nav>
     <div class="box">
     <div id="mg"><img src="images/name.png" alt="name" width="600px"></div>
-    <p>a brief synopsis of how amazing I am</p>
+    <p>Welcome To My Website!</p>
         <div id="logo">
             <img src="images/NEWlogo.png" alt="MG Logo image" width="180px">
         </div> <!-- end of logo div !-->
