--- a/portfolio.html
+++ b/portfolio.html
@@ -22,9 +22,9 @@
     <!-- End of NAV-->
 
     <div class="works">
-    <div id="port"><img src="images/portfolio.png" alt="aboutme" width="300"></div>
+    <div id="port"><img src="images/portfolio.png" alt="portfolio" width="290px"></div>
     <div class="box">
-        <p><i>brief portfolio synopsis here</i></p>
+    <p><i>Works throughout my middle and high school career</i></p>
     </div>
 
     <!--lay out in flex instead-->
