--- a/about.html
+++ b/about.html
@@ -22,8 +22,11 @@
         <img src="images/NEWlogo.png" alt="MG Logo image" width="150px" id="logo">
     </div>
     <div class="text">
-    <h4>Hello!</h4>
-    <p>Melanie Gasmen is a current student at Cab Calloway School of the Arts. She double-majors in both Visual Arts and Digital Media and has earned distinguished honors since middle school.<br/><br/>Melanie is a member of several organizations, such as: Technology Student Association; Science Olympiad; National Art Honor Society; Communication Arts Honor Society; and National Honor Society. She has an abundance of volunteer experience as well. Melanie has done community projects that involved photography, art, advertisement, and assistment. <br/><br/>She has also won several awards since her middle school career. As of 2017, she won two Honorable Mentions, two Silver Keys, and two Gold Keys while competing in the statewide Scholastic Art & Writing Awards.
-    </p><div class="img"></div></div>
+    <h1>Hello!</h1>
+    <p>Melanie Gasmen is a current student at Cab Calloway School of the Arts. She double-majors in both Visual Arts and Digital Media and has achieved distinguished honors since middle school.<br/><br/>Melanie is a member of several organizations, such as: Technology Student Association; Science Olympiad; National Art Honor Society; Communication Arts Honor Society; and National Honor Society. She has an abundance of volunteer experience as well. Melanie has done community projects that involved photography, art, advertisement, and assisting.<br/><br/>She has also won several awards since her middle school career. As of 2017, she won two Honorable Mentions, two Silver Keys, and two Gold Keys while competing in the statewide Scholastic Art & Writing Awards. She was also winner of the Youth Art Month flag contest in 2016. This year she placed in second for the Federal Junior Duck Stamp Design contest. <br/><br/>Melanie has multiple skills that can benefit towards work opportunities. She can work independently and solve problems in a creative way. She is also very organized with planning. She holds extensive knowledge of Adobe programs such as InDesign, Illustrator, and Photoshop. She knows how to use Microsoft Office as well. Additionally, she is artistically talented, which is kind of why she’s attending CCSA in the first place.
+    </p>
+    <h2>Resume:</h2>
+    <img src="images/resumeNEWNEW.jpg" alt="resume" width="500px" id="resume">
+    </div>
 </body>
 </html>
